syntax = "proto3";

package email;

service EmailService {
  rpc SendAssignmentNotification (AssignmentEmailRequest) returns (EmailResponse);
}

message AssignmentEmailRequest {
  string admin_name = 1;
  string subject = 2;
  string body = 3;
  repeated string recipients = 4; // arary of email to send to
}

message EmailResponse {
  string message = 1;
  bool success = 2;
}
